RESOLVED FIXED221157
[JSC] Fix WebAssembly.Global's error message and support "funcref"
https://bugs.webkit.org/show_bug.cgi?id=221157
Summary [JSC] Fix WebAssembly.Global's error message and support "funcref"
Yusuke Suzuki
Reported 2021-01-29 14:33:05 PST
[JSC] Fix WebAssembly.Global's error message
Attachments
Patch (7.66 KB, patch)
2021-01-29 14:33 PST, Yusuke Suzuki
keith_miller: review+
Patch (9.79 KB, patch)
2021-01-29 14:40 PST, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2021-01-29 14:33:57 PST
Yusuke Suzuki
Comment 2 2021-01-29 14:35:44 PST
Comment on attachment 418773 [details] Patch Ah, I think we should also add "Funcref" support too.
Yusuke Suzuki
Comment 3 2021-01-29 14:40:40 PST
Yusuke Suzuki
Comment 4 2021-01-29 15:06:56 PST
To unblock ongoing failure, I'll land this now, and see bots.
Yusuke Suzuki
Comment 5 2021-01-29 15:07:31 PST
Radar WebKit Bug Importer
Comment 6 2021-01-29 15:08:15 PST
Yusuke Suzuki
Comment 7 2021-01-29 15:28:28 PST
*** Bug 221159 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.