[JSC] Fix WebAssembly.Global's error message and support "funcref" https://bugs.webkit.org/show_bug.cgi?id=221157

Reviewed by Keith Miller.

JSTests:

* wasm/stress/global-wrong-type.js: Added.
(assert.throws):

LayoutTests/imported/w3c:

We also update test expect files failing after r272074.

* web-platform-tests/wasm/jsapi/global/type.tentative.any-expected.txt:
* web-platform-tests/wasm/jsapi/global/type.tentative.any.worker-expected.txt:

Source/JavaScriptCore:

Since it accepts "anyfunc" and "externref", we should update the error message.
And we should support "funcref" too.

* wasm/js/WebAssemblyGlobalConstructor.cpp:
(JSC::JSC_DEFINE_HOST_FUNCTION):
* wasm/js/WebAssemblyTableConstructor.cpp:
(JSC::JSC_DEFINE_HOST_FUNCTION):

Canonical link: https://commits.webkit.org/233496@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272081 268f45cc-cd09-0410-ab3c-d52691b4dbfc